# Archiforge

./: .gitignore  MANIFEST.in  README.md  publish.py  pyproject.toml  setup.py  test_key.py
Simple Web Application/: app.py  index.html
SimpleTodoList/: index.html
archiforge/: archiver.py  cli.py  utils.py
archiforge/core/: ai_engine.py  traditional.py
blueprints/FastAPI/: .dockerignore  main.py
blueprints/nodejs/: app.js  package.json
blueprints/python/: README.md
blueprints/react/: Dockerfile  package.json
blueprints/react/src/: App.jsx
